attempting to fix unwanted auto-zoom on mobile browsers when search bar focused

--- a/src/index.css
+++ b/src/index.css
@@ -525,7 +525,7 @@ movie-info-right-column{
 
 .searchbar{
   /*color: red;*/
-  font-size: 0.8rem !important;
+  font-size: 18px !important;
 
 
 }
